--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,1 +1,9 @@
-res.setHeader('Cache-Control', 's-maxage=60, stale-while-revalidate');
+{
+  "version": 2,
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/api/proxy"
+    }
+  ]
+}
