--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,19 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/proxy.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/", "dest": "/api/proxy.py" }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "api/proxy.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/proxy",
+            "dest": "/api/proxy.js"
+        },
+        {
+            "src": "/",
+            "dest": "/index.html"
+        }
+    ]
 }
