--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,18 @@
-   {
-       "version": 2,
-       "builds": [
-           {
-               "src": "api/proxy.js",
-               "use": "@vercel/node"
-           }
-       ],
-       "routes": [
-           {
-               "src": "/api/proxy",
-               "dest": "/api/proxy.js"
-           },
-           {
-               "src": "/",
-               "dest": "/index.html"
-           }
-       ]
-   }
-   
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.py"
+    }
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.9"
+  }
+}
