--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "type": "module",
+  "name": "proxy-clone-vercel",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "vercel dev"
+  },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "http-proxy-middleware": "^2.0.6",
+    "parse5": "^7.1.2"
   }
 }
